Updated '_posts/2016-12-09-pork.md' via CloudCannon

--- a/_posts/2016-12-09-pork.md
+++ b/_posts/2016-12-09-pork.md
@@ -10,4 +10,4 @@ author_staff_member:
 
 My content is waiting to be viewed by the world.
 
-![Geordino Pesanthropov](//lh3.googleusercontent.com/CyrKiOlRlDLV7QAzWmiQfzX-jQM_Q-v6sVtDq6m_VlMbWBGid2RIRppr4B37Q9EU9SifJkc8BqEFT5lzul4MjFFWT75eQ7qVPAs=s800-rw-e30&.jpg)
+![Geordino Pesanthropov](https://lh3.googleusercontent.com/CyrKiOlRlDLV7QAzWmiQfzX-jQM_Q-v6sVtDq6m_VlMbWBGid2RIRppr4B37Q9EU9SifJkc8BqEFT5lzul4MjFFWT75eQ7qVPAs=s800-rw-e30&.jpg)
