--- a/_posts/2016-12-09-pork.md
+++ b/_posts/2016-12-09-pork.md
@@ -10,4 +10,4 @@ author_staff_member:
 
 My content is waiting to be viewed by the world.
 
-![Geordino Pesanthropov](/uploads/sample.jpg)
+![Geordino Pesanthropov](https://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_80_bold:MAXGOLDHOUSE,co_rgb:FFFFFF60/w_1600/sample.jpg)
