Updated '_posts/2016-12-09-pork.md' via CloudCannon

--- a/_posts/2016-12-09-pork.md
+++ b/_posts/2016-12-09-pork.md
@@ -3,7 +3,7 @@ title: pork
 date: 2016-12-09 00:00:00
 description:
 categories:
-image: 'http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_2000/v1480691751/1a_kiow05.jpg)'
+image: 'http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_2000/v1480691751/1a_kiow05.jpg'
 author_staff_member:
 ---
 
