--- a/_posts/2016-12-09-pork.md
+++ b/_posts/2016-12-09-pork.md
@@ -12,4 +12,4 @@ My content is waiting to be viewed by the world. ![New Apartments in Torrevieja]
 
 {% include ytp.html id="F2xv4fba65U" %}
 
-<div class='embed-container'><iframe allowfullscreen='true' frameborder='0' mozallowfullscreen='true' src='https://docs.google.com/presentation/d/1JnKQkZYnsbWNWmrWBcYz738PxbBwtolBv_IpxyCcRXY/embed?start=true&loop=true&delayms=15000' style='position: absolute;top:0;left: 0;width: 100%;height: 100%;' webkitallowfullscreen='true'/></div>
+<div class='embed-container'><iframe allowfullscreen='true' frameborder='0' mozallowfullscreen='true' src='https://docs.google.com/presentation/d/1JnKQkZYnsbWNWmrWBcYz738PxbBwtolBv_IpxyCcRXY/embed?start=true&loop=true&delayms=15000' style='position: absolute;top:0;left: 0;' webkitallowfullscreen='true'/></div>
