--- a/_posts/2016-12-09-pork.md
+++ b/_posts/2016-12-09-pork.md
@@ -5,11 +5,16 @@ description:
 categories:
 image: 'http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_800/v1480691751/1a_kiow05.jpg'
 author_staff_member:
+showvid: true
 ---
 
 
 My content is waiting to be viewed by the world. ![New Apartments in Torrevieja](http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_800/v1480691751/1a_kiow05.jpg)
 
+{% if page.showvid.size != 0 %}
+
 <div style="margin-bottom: 40px;">{% include ytp.html id="F2xv4fba65U" %}</div>
+
+{% endif %}
 
 <div class='embed-container'><iframe allowfullscreen='true' frameborder='0' mozallowfullscreen='true' src='https://docs.google.com/presentation/d/1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s/embed?start=true&loop=true&delayms=15000' style='position: absolute;top:0;left: 0;' webkitallowfullscreen='true'/></div>
