--- a/_posts/2016-12-09-pork.md
+++ b/_posts/2016-12-09-pork.md
@@ -11,7 +11,7 @@ showvid: 'yes'
 
 My content is waiting to be viewed by the world. ![New Apartments in Torrevieja](http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_800/v1480691751/1a_kiow05.jpg)
 
-{% if page.showvid.size %}
+{% if page.showvid.size != 0 %}
 
 <div style="margin-bottom: 40px;">{% include ytp.html id="F2xv4fba65U" %}</div>
 
