Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -17,4 +17,8 @@ My content is waiting to be viewed by the world. ![New Apartments in Torrevieja]
 
 {% endif %}
 
-<div class="embed-container"><iframe allowfullscreen="true" frameborder="0" mozallowfullscreen="true" src="https://docs.google.com/presentation/d/1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s/embed?start=true&amp;loop=true&amp;delayms=15000" style="position: absolute;top:0;left: 0;" webkitallowfullscreen="true"></iframe></div>
+{% if page.showvid %}
+
+<div style="margin-bottom: 40px;">{% include gslides.html slidesid="1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s" %}</div>
+
+{% endif %}
