Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -5,19 +5,20 @@ description:
 categories:
 image: 'http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_800/v1480691751/1a_kiow05.jpg'
 author_staff_member: gerald
-showvid: true
+vidid: 'F2xv4fba65U
+slidesid: '1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s'
 ---
 
 
 My content is waiting to be viewed by the world. ![New Apartments in Torrevieja](http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_800/v1480691751/1a_kiow05.jpg)
 
-{% if page.showvid %}
+{% if page.vidid.size != 0 %}
 
 <div style="margin-bottom: 40px;">{% include ytp.html id="F2xv4fba65U" %}</div>
 
 {% endif %}
 
-{% if page.showvid %}
+{% if page.slidesid.size != 0 %}
 
 <div style="margin-bottom: 40px;">{% include gslides.html slidesid="1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s" %}</div>
 
