Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -24,15 +24,15 @@ My content is waiting to be viewed by the world. ![New Apartments in Torrevieja]
 
 {% endif %}
 
-| name  | type  | cost  |  available |
-|---|:-:|:-:|:-:|
-|Ford   |  Consul | 2000  |  imediately |
-|   |   |   |   |
-|   |   |   |   |
-|   |   |   |   |
-|   |   |   |   |
-|   |   |   |   |
-|   |   |   |   |
+|             |          Grouping           ||
+First Header  | Second Header | Third Header |
+ ------------ | :-----------: | -----------: |
+Content       |          *Long Cell*        ||
+Content       |   **Cell**    |         Cell |
+
+New section   |     More      |         Data |
+And more      | With an escaped '\|'         ||  
+[Prototype table]
 
 <video preload="auto" autoplay="" loop="" class="fillWidth fadeIn animated" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Holiday-Spirit.jpg" style="width: 3488.09px; margin-top: 0px; margin-left: -1254.05px; height: 1743px;">
             <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Holiday-Spirit.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
