Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -3,7 +3,7 @@ title: Porker
 date: 2016-12-09 00:00:00
 description:
 categories:
-image: 'http://res.cloudinary.com/maxgoldhouse/image/upload/l_text:Arial_70_bold:M%20A%20X%20G%20O%20L%20D%20H%20O%20U%20S%20E,co_rgb:FFFFFF20/w_800/v1480691751/1a_kiow05.jpg'
+image: /uploads/dado.jpg
 author_staff_member: gerald
 vidid: F2xv4fba65U
 slidesid: 1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s
@@ -16,6 +16,7 @@ My content is waiting to be viewed by the world.
 
 {% include youtube.html id="F2xv4fba65U" %}
 
-<br/><br/>
+<br>
+<br>
 
 {% include gslides.html slidesid="1SlIi34TJtDlJhSb4R7vcI3fhX6RE4GG78R2sZzOfN60" %}
