Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -14,6 +14,8 @@ My content is waiting to be viewed by the world.
 
 ![](https://lh3.googleusercontent.com/-ALlcY24L55bXJdMTJzv5Iw65luxjX94zKhrE-YLKuaf0HcgKZNHMbmV8GDNobzGXnSnxTgr2GtCKMHPDRoClfItTrhO5LD2Qzg=s800-rj-v2-e30){: .right-image}
 
+I am worried that things are going to change. For that reason, and that reason alone, I am going to do nothing more than plan. &nbsp;I will wait for the change and then act. I will make 3-4 different plans and will act upon the plan that best helps me cope with the change.
+
 {% include youtube.html id="F2xv4fba65U" %}
 
 <br>{% include right-image.html src="//lh3.googleusercontent.com/-77KqAPIDs2I/WTvxCmjxuwI/AAAAAAAASZM/07Y5Nx7lpo8_CYDqcKoIB0_UKv81Hj1AACJoC/s300/iPiccy-collage.jpg" caption="INVEST Essex Photo Fest" %}
