Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -18,6 +18,6 @@ I am worried that things are going to change. For that reason, and that reason a
 
 {% include youtube.html id="F2xv4fba65U" %}
 
-<br>{% include right-image.html src="//lh3.googleusercontent.com/-77KqAPIDs2I/WTvxCmjxuwI/AAAAAAAASZM/07Y5Nx7lpo8_CYDqcKoIB0_UKv81Hj1AACJoC/s300/iPiccy-collage.jpg" caption="INVEST Essex Photo Fest" %}
+<br>{% include right-image.html src="//lh3.googleusercontent.com/-77KqAPIDs2I/WTvxCmjxuwI/AAAAAAAASZM/07Y5Nx7lpo8_CYDqcKoIB0_UKv81Hj1AACJoC/s300/iPiccy-collage.jpg" caption="INVEST Essex Photo Fest" width="200" %}
 
 {% include gslides.html slidesid="1SlIi34TJtDlJhSb4R7vcI3fhX6RE4GG78R2sZzOfN60" %}
