Updated '_posts/2016-12-09-porker.md' via CloudCannon

--- a/_posts/2016-12-09-porker.md
+++ b/_posts/2016-12-09-porker.md
@@ -12,7 +12,7 @@ slidesid: 1aOrhNrXjXhS4ivxPVc5Y5fWjJEgS5sd5CuSUKvbmi4s
 
 My content is waiting to be viewed by the world.
 
-![](https://lh3.googleusercontent.com/-ALlcY24L55bXJdMTJzv5Iw65luxjX94zKhrE-YLKuaf0HcgKZNHMbmV8GDNobzGXnSnxTgr2GtCKMHPDRoClfItTrhO5LD2Qzg=s800-rj-v2-e30){: .right-image}
+![The New Capitalist world Parliament](https://lh3.googleusercontent.com/-ALlcY24L55bXJdMTJzv5Iw65luxjX94zKhrE-YLKuaf0HcgKZNHMbmV8GDNobzGXnSnxTgr2GtCKMHPDRoClfItTrhO5LD2Qzg=s800-rj-v2-e30){: .right-image}
 
 I am worried that things are going to change. For that reason, and that reason alone, I am going to do nothing more than plan. &nbsp;I will wait for the change and then act. I will make 3-4 different plans and will act upon the plan that best helps me cope with the change.
 
